--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^15.0.0"
   }
 }
