--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -25,6 +20,12 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "eslint-config-airbnb-base": "^15.0.0"
+    "autoprefixer": "^10.4.15",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "postcss": "^8.4.28",
+    "prettier": "^3.0.2",
+    "prettier-plugin-organize-imports": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "tailwindcss": "^3.3.3"
   }
 }
